--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -277,4 +277,6 @@
     <string name="failed_to_extract_logs">Failed to extract logs file</string>
     <string name="continue_playing">Continue playing</string>
     <string name="no_language_selected">No language selected</string>
+    <string name="no_item_selected">No item selected</string>
+    <string name="analysis_updated">Updated analysis</string>
 </resources>
