--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="loading">Loading…</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_analyse">Analyse</string>
-    <string name="title_files">Files</string>
+    <string name="title_utilities">Utilities</string>
     <string name="title_transfer">Transfer</string>
     <string name="title_scan">Scan</string>
     <string name="title_stop_scan">Stop</string>
