Implement image viewer bottom bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -297,4 +297,7 @@
         otherwise you\'ll not be able to track the transfer</string>
     <string name="leave">Leave</string>
     <string name="stay">Stay</string>
+    <string name="edit">Edit</string>
+    <string name="set_as">Set as…</string>
+    <string name="delete">Delete</string>
 </resources>
