Image viewer bottom sheet layout improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -300,4 +300,11 @@
     <string name="edit">Edit</string>
     <string name="set_as">Set as…</string>
     <string name="delete">Delete</string>
+    <string name="details">Details</string>
+    <string name="make">Make</string>
+    <string name="model">Model</string>
+    <string name="aperture">Aperture</string>
+    <string name="iso">ISO</string>
+    <string name="shutter_time">Shutter time</string>
+    <string name="location">Location</string>
 </resources>
