--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -312,4 +312,5 @@
     <string name="longitude">Longitude</string>
     <string name="file_name">File Name</string>
     <string name="path">Path</string>
+    <string name="open_in_maps">Open in Map</string>
 </resources>
