--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -313,4 +313,5 @@
     <string name="file_name">File Name</string>
     <string name="path">Path</string>
     <string name="open_in_maps">Open in Map</string>
+    <string name="share">Share</string>
 </resources>
