Implement trial dialogs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -331,4 +331,52 @@
     <string name="contact_us">Contact Us</string>
     <string name="about_app_title">About app</string>
     <string name="made_in_india">Made with ❤ in India</string>
+    <string name="trial_started_title">Trial started</string>
+    <string name="trial_started_message">Thank you for choosing Amaze File Utilities.\n
+        We are a team of open source developers working hard to provide an ad-free experience,
+        and your subscription will really help us in development.\n
+        At any point if you need any help feel free to contact us in About section.
+        You\'ll be able to contact directly to our team on Telegram.\n
+        Please also try our open source file manager application \'Amaze File Manager\' for a seamless file management experience.</string>
+    <string name="trial_last_day_title">Trial about to expire</string>
+    <string name="trial_last_day_message">Hey There! Thank you for choosing Amaze File Utilities.\n
+        Your trial is going to expire tomorrow,
+        we hope you\'ve enjoyed our software, and we look forward for you subscribe to our yearly plan at a very nominal fee.\n
+        We are a team of open source developers working hard to provide an ad-free experience,
+        and we need funds to us to keep us afloat.\n
+        You can write to us if you want to extend the trial period a bit more.
+    </string>
+    <string name="trial_expired_title">Trial expired</string>
+    <string name="trial_expired_message">Hey There! Thank you for choosing Amaze File Utilities.\n
+        Your trial has expired,
+        we hope you\'ve enjoyed our software, and we look forward for you subscribe to our yearly plan at a very nominal fee.\n
+        We are a team of open source developers working hard to provide an ad-free experience,
+        and we need funds to us to keep us afloat.\n
+        You can write to us if you want to extend the trial period a bit more.
+    </string>
+    <string name="trial_inactive_title">Trial inactive</string>
+    <string name="trial_inactive_message">Hey There! Thank you for choosing Amaze File Utilities.\n
+        Your trial is inactive and you\'re not longer an exclusive member,
+        we hope you\'ve enjoyed our software, and we look forward for you subscribe to our yearly plan at a very nominal fee.\n
+        We are a team of open source developers working hard to provide an ad-free experience,
+        and we need funds to us to keep us afloat.\n
+        You can write to us if you want to extend the trial period a bit more.</string>
+    <string name="subscription_purchased_title">Subscribed</string>
+    <string name="subscription_purchased_message">Thank you for choosing Amaze File Utilities.\n
+        We are a team of open source developers working hard to provide an ad-free experience,
+        and your subscription will really help us in development.\n
+        At any point if you need any help feel free to contact us in About section.
+        You\'ll be able to contact directly to our team on Telegram.\n
+        Please also try our open source file manager application \'Amaze File Manager\' for a seamless file management experience.</string>
+    <string name="subscription_expired_title">Subscription expired</string>
+    <string name="subscription_expired_message">Hey There! Thank you for choosing Amaze File Utilities.\n
+        Your subscription has expired,
+        we hope you\'ve enjoyed our software, and we look forward for you subscribe to our yearly plan at a very nominal fee.\n
+        We are a team of open source developers working hard to provide an ad-free experience,
+        and we need funds to us to keep us afloat.\n
+        You can write to us if you want to extend the trial period a bit more.</string>
+    <string name="subscribe">Subscribe</string>
+    <string name="dont_show_again">Don\'t show again</string>
+    <string name="exit">Exit</string>
+    <string name="num_days">% Days</string>
 </resources>
