--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -263,7 +263,7 @@
     <string name="rating">Rating</string>
     <string name="cd" translatable="false">CD</string>
     <string name="uploader">Uploader</string>
-    <string name="imdb" translatable="false">IMDB</string>
+    <string name="downloads">Downloads</string>
     <string name="language">Language</string>
     <string name="no_results_subtitles">No results, please try with different keywords…</string>
     <string name="downloading">Downloading…</string>
