--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name_launcher">Amaze Utilities</string>
     <string name="about_app">File Utility app with inbuilt media players for all your needs.</string>
     <string name="team_amaze" translatable="false">Team Amaze</string>
-    <string name="app_version" translatable="false">v1.37</string>
+    <string name="app_version" translatable="false">v1.38</string>
     <string name="image_viewer">Amaze Image Viewer</string>
     <string name="video_player">Amaze Video Player</string>
     <string name="amaze_audio_player">Amaze Music Player</string>
@@ -411,4 +411,5 @@
     <string name="license_agreement_not_accepted">Please accept license agreement</string>
     <string name="renewal_cycle">Renewal cycle - %s</string>
     <string name="lifetime_membership">Lifetime Membership</string>
+    <string name="one_year">1 Year</string>
 </resources>
