--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name_launcher">Amaze Utilities</string>
     <string name="about_app">File Utility app with inbuilt media players for all your needs.</string>
     <string name="team_amaze" translatable="false">Team Amaze</string>
-    <string name="app_version" translatable="false">v1.39</string>
+    <string name="app_version" translatable="false">v1.40</string>
     <string name="image_viewer">Amaze Image Viewer</string>
     <string name="video_player">Amaze Video Player</string>
     <string name="amaze_audio_player">Amaze Music Player</string>
@@ -412,4 +412,5 @@
     <string name="renewal_cycle">Renewal cycle - %s</string>
     <string name="lifetime_membership">Lifetime Membership</string>
     <string name="one_year">1 Year</string>
+    <string name="operation_failed">Operation failed</string>
 </resources>
